# new-pykube

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: build-publish-package.yml  python-tests.yml
docs/: changelog.rst  conf.py  index.rst  readme.rst  requirements.txt  users.rst
docs/api/: modules.rst  pykube.rst
docs/howtos/: access-service-with-api-proxy.rst  find-pods-by-label.rst  index.rst  print-container-logs.rst  update-deployment-image.rst  use-interactive-console.rst  write-an-operator.rst
pykube/: __init__.py  __main__.py  config.py  console.py  http.py  mixins.py  objects.py  query.py  utils.py
test/: test_config.py  test_http.py
tests/: __init__.py  test_api.py  test_config.py  test_config.yaml  test_config_overrides.yaml  test_config_with_context.yaml  test_config_with_insecure_skip_tls_verify.yaml  test_config_with_oidc_auth.yaml  test_console.py  test_http.py  test_httpclient.py  test_objects.py  test_query.py  test_session.py  test_utils.py  test_watch.py
