[tool]
[tool.poetry]
name = "new-pykube"
version = "24.12.0"
description = "Python client library for Kubernetes"
license = "Apache"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
authors = ["Jonathan Mayer <jonathan.mayer@telekom.de>", "Jan Taeuber <jan.taeuber@telekom.de>", "Johannes Thiem <johannesthiem6@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/caas-team/new-pykube"
packages = [{ include = "pykube" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
google-auth = {optional = true, version = "*"}
jsonpath-ng = {optional = true, version = "*"}
pyyaml = "*"
requests = ">=2.12"
urllib3 = ">=1.26.9"
requests-oauthlib = {version = "^1.3.0", optional = true}

[tool.poetry.extras]
gcp = ["google-auth", "jsonpath-ng"]
oidc = ["requests-oauthlib"]

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"
pytest-cov = "^2.8.1"
responses = "^0.10.9"
sphinx = "^2.3.1"
sphinx-rtd-theme = "^0.4.3"
sphinx-autodoc-annotation = "^1.0-1"
pre-commit = ">=4.0.1"
pytest-mock = "^3.1.1"
